feat(pom.xml): add windows executable package step (via Launch4J), add windows icon